# rag_chatbot

./: .dockerignore  .env.example  .env.langfuse.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  NAVER_CLOUD_S3.json  README.md  docker-compose.yml  env.example  mypy.ini  pyproject.toml  quality_checkpoint.json  restore_snapshot.py  ruff.toml  run_qdrant.sh  run_server.sh
data/: checkpoints.db
docs/: ADAPTIVE_RAG_OPTIMIZATION.md  ADAPTIVE_RAG_USAGE.md  OOD_IMPROVEMENT_ANALYSIS.md  PROMPT_IMPROVEMENT_PLAN.md  RETRIEVER_INTEGRATION_GUIDE.md  WORK_IN_PROGRESS.md  fix-intent-classification-tools-reasoning-error.md  naver-cloud-api-information.md
document_chunks/: GROUP4_MANUAL_REVIEW_REPORT.md  RAG_INTEGRATION_REPORT.md  comparison_stats.json  hybrid_search_results.json  qualitative_comparison.md  search_results_new.json  search_results_old.json
document_processing/: AGENTS.md  HYBRID_SEARCH_USAGE.md  PROCESSING_PLAN.md  README.md  VECTORDB_USAGE.md  bm25_indexer.py  check_qdrant_collections.py  filter_qa_data.py  hybrid_retriever.py  hybrid_search_strategy.md  ingest_all_to_vectordb.py  ingest_to_vectordb.py  merge_qa_by_course.py  openrouter_embeddings.py  process_all_slack_data.py  rebuild_bm25_for_chatbot.py  rebuild_unified_bm25.py  vectordb_ingestion_guide.md
processed/: (10강) 3D Human_1.mp4_2025-12-04-103049928.json  (10강) Binary Classification2_2.mp4_2025-12-04-102820614.json  (10강) Decoding을 통한 자연어 생성_3.mp4_2025-12-04-103049823.json  (10강) Transformer -3 - Transformer_4.mp4_2025-12-04-103044987.json  (+122 more)
sparse_index/: README.md
(+1070 files in other folders)
